@@ -688,6 +688,15 @@ switch(isset($_GET['page']) ? $_GET['page'] : null)
 				$PAGE .= '<p style="text-align: center; overflow: auto;" class="result_object">' . pts_render::render_graph_inline_embed($graph, $result_file, $extra_attributes) . '</p>';
 			}
 		}
+		else if($result_file->get_system_count() > 12 && false) // TODO determine when this is sane enough to enable
+		{
+			$graph = new pts_graph_mini_overview($result_file, '');
+
+			if($graph->renderGraph())
+			{
+				$PAGE .= '<p style="text-align: center; overflow: auto;" class="result_object">' . pts_render::render_graph_inline_embed($graph, $result_file, $extra_attributes) . '</p>';
+			}
+		}
 		else if(!$result_file->is_multi_way_comparison())
 		{
 			foreach(array('', 'Per Watt', 'Per Dollar') as $selector)
